[command]
option = value

[metadata]
name = playground-sajilck
version = 0.0.1
author = Sajil C. K.
author_email = sajilck@gmail.com
description = a sample package by Sajil
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cksajil/playground
project_urls =
    Bug Tracker = https://github.com/cksajil/playground/issues
    repository = https://github.com/cksajil/playground
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src